[gd_scene load_steps=4 format=3 uid="uid://68ca2vk6tjtg"]

[ext_resource type="Script" path="res://assets/scenes/playloadwindow/playaudiowindow.gd" id="1_7wugq"]
[ext_resource type="Texture2D" uid="uid://bqwa303ek508t" path="res://assets/themes/default/plusicon.png" id="2_pulwo"]
[ext_resource type="Texture2D" uid="uid://bisr7x7yuge3w" path="res://assets/themes/default/credits_icon.png" id="3_5bcy6"]

[node name="MainParentNode" type="Node"]
script = ExtResource("1_7wugq")

[node name="UI_Parent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Control" parent="UI_Parent"]
layout_mode = 2
anchors_preset = 0
offset_right = 576.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Parent/TopBar"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
offset_right = 576.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="FileModButton" type="Button" parent="UI_Parent/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("2_pulwo")
icon_alignment = 1
expand_icon = true

[node name="CreditsButton" type="Button" parent="UI_Parent/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_5bcy6")
icon_alignment = 1
expand_icon = true

[node name="SoundBoardGrid" type="Node" parent="UI_Parent"]

[node name="Control" type="Control" parent="UI_Parent/SoundBoardGrid"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI_Parent/SoundBoardGrid"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 356.0
grow_horizontal = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="UI_Parent/SoundBoardGrid/ScrollContainer"]
layout_mode = 2
columns = 11

[node name="Button91" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button92" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button93" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button94" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button95" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button96" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button97" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button39" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button40" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button41" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button42" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button43" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button44" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button45" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button46" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button47" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button48" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button49" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button50" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button51" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button52" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button53" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button54" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button55" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button56" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button57" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button58" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button59" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button60" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button61" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button62" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button63" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button64" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button65" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button66" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button67" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button68" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button69" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button70" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button71" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button72" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button73" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button74" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button75" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button17" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button18" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button19" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button20" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button21" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button22" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button23" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button35" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button36" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button37" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button38" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button24" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button25" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button26" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button27" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button28" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button29" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button30" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button31" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button32" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button33" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button34" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button2" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button3" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button4" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button5" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button6" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button7" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button8" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button9" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button10" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button11" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button12" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button13" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button14" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button15" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button16" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[node name="Button76" type="Button" parent="UI_Parent/SoundBoardGrid/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Test."

[connection signal="pressed" from="UI_Parent/TopBar/HBoxContainer/FileModButton" to="." method="_on_file_mod_button_pressed"]
[connection signal="pressed" from="UI_Parent/TopBar/HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
